Dokončano poglavje 19 po vrnitvi iz Nizozemske

--- a/GUSSOW/chapter_19.ipynb
+++ b/GUSSOW/chapter_19.ipynb
@@ -31,7 +31,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x240ed8cb510>]"
+       "[<matplotlib.lines.Line2D at 0x1ba23479310>]"
       ]
      },
      "execution_count": 2,
@@ -106,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x240ee1c6050>]"
+       "[<matplotlib.lines.Line2D at 0x1ba23144d90>]"
       ]
      },
      "execution_count": 3,
@@ -169,7 +169,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x240ee398cd0>]"
+       "[<matplotlib.lines.Line2D at 0x1ba2359ce10>]"
       ]
      },
      "execution_count": 4,
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6aacc09f-818b-4c91-84ec-b88cb9074958",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "95b5a262-a057-4e9b-ba21-9ae888955eb3",
    "metadata": {
     "scrolled": true
@@ -252,7 +252,7 @@
        "1.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,13 +267,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "00d737f5-a890-4197-acfa-316353cef1b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R = 10.0 ohm, L = 10.0 H, T = 1.0 s, t = 1.0 s, exp = 0.368\n",
+      "R =  5.0 ohm, L = 10.0 H, T = 2.0 s, t = 1.0 s, exp = 0.607\n",
+      "R =  5.0 ohm, L = 10.0 H, T = 2.0 s, t = 2.0 s, exp = 0.368\n",
+      "R = 10.0 ohm, L =  5.0 H, T = 0.5 s, t = 1.0 s, exp = 0.135\n",
+      "R = 10.0 ohm, L =  5.0 H, T = 0.5 s, t = 2.0 s, exp = 0.0183\n"
+     ]
+    }
+   ],
    "source": [
-    "# ex.19.4\n",
-    "\n"
+    "# ex.19.11\n",
+    "\n",
+    "RR = (10,  5,  5, 10, 10)\n",
+    "LL = (10, 10, 10,  5,  5)\n",
+    "tt = ( 1,  1,  2,  1,  2)\n",
+    "\n",
+    "for R, L, t in zip(RR, LL, tt):\n",
+    "    T = L / R\n",
+    "    e = exp(-t/T)\n",
+    "    print(f'R = {R:4.1f} ohm, L = {L:4.1f} H, T = {T:3.1f} s, t = {t:3.1f} s, exp = {e:.3}')\n",
+    "    \n",
+    "    "
    ]
   }
  ],
